--- a/src/pages/auth/forgotPassword/ForgotPassword.css
+++ b/src/pages/auth/forgotPassword/ForgotPassword.css
@@ -28,6 +28,8 @@
   margin-top: 30px;
 }
 .button-forgotPassword {
+  color: pointer !important;
+  border: none !important;
   text-transform: uppercase;
   font-weight: bold;
   background-color: #ffd808;
