--- a/src/pages/auth/resetPassword/ResetPassword.css
+++ b/src/pages/auth/resetPassword/ResetPassword.css
@@ -28,10 +28,12 @@
     margin-top: 20px;
   }
   .button-resetPassword{
+    cursor:pointer  !important;
+    border:none !important;
     text-transform: uppercase;
     font-weight: bold;
     background-color: #ffd808;
-    margin: 25px auto;
+    margin: 10px auto;
     padding: 10px;
     width: 100%;
     display: block;
