--- a/src/pages/auth/login/Login.css
+++ b/src/pages/auth/login/Login.css
@@ -1,19 +1,13 @@
 /* ------------- LOGIN--------------- */
-.container-login {
+.container-login-main {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #FFF9DA;
+  background-color: #fff9da;
 }
-
-.login-form-content{
-  display: flex;
-  flex-direction: column;
-  gap: 20px 0 !important;
-}
-.login_page {
+.container-login-page {
   height: 80vh;
   width: 100%;
   max-width: 400px;
@@ -22,48 +16,56 @@
   padding: 50px;
   background-color: #fff;
 }
-.form {
-  margin-top: 90px;
-}
 .logo {
   width: 80%;
   display: block;
   margin: auto;
 }
+
+.container-login-form-content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px 0 !important;
+}
+.form {
+  margin-top: 90px;
+}
 .button-login {
   text-transform: uppercase;
-  font-weight: bold ;
-  background-color: #ffd808 ;
+  font-weight: bold;
+  background-color: #ffd808;
   margin: 45px auto;
   padding: 10px;
-  width: 100% ;
-  display: block ;
-  cursor: pointer ;
+  width: 100%;
+  display: block;
+  cursor: pointer;
   border: none;
 }
-.login_page p {
-  font-size: 14px;
-  cursor: pointer;
-  margin: 15px 0;
-  font-weight: 600;
-}
-.login_page a {
+.container-login-page a {
   font-size: 14px;
   color: #000;
   font-weight: 600;
 }
 
+.container-login-page p {
+  font-size: 14px;
+  cursor: pointer;
+  margin: 15px 0;
+  font-weight: 600;
+}
+
 /* ------------- MEDIA QUERIES --------------- */
 @media (max-width: 1059px) {
+  .container-login-page  {
+    height: 90vh;
+  }
   .form {
     margin-top: 70px;
   }
-  .button-login { 
-    margin: 50px auto 30px auto; 
+  .button-login {
+    margin: 50px auto 30px auto;
   }
-  .login_page{
-    height: 90vh;
-  }
+  
 }
 /* ------------- MEDIA QUERIES --------------- */
 @media (max-width: 300px) {
@@ -71,4 +73,3 @@
     margin: 20px auto;
   }
 }
-
